[tool.poetry]
name = "tassadar"
version = "0.1.0"
description = ""
authors = ["nelly <nelly@buzzni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[pytest]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

